--- a/crispy_formset_modal/templates/crispy_formset_modal/bootstrap4/modal.html
+++ b/crispy_formset_modal/templates/crispy_formset_modal/bootstrap4/modal.html
@@ -1,5 +1,5 @@
 <div id="{{ dialog_id }}" class="modal cfm" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-lg w-100">
       <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title">Editar</h5>
