--- a/crispy_formset_modal/templates/crispy_formset_modal/bootstrap4/table.html
+++ b/crispy_formset_modal/templates/crispy_formset_modal/bootstrap4/table.html
@@ -5,6 +5,9 @@
      class="formset"
      data-formset-prefix="{{ formset.prefix }}"
      data-formset-variant="modal"
+     data-template-pack="{{ template_pack }}"
+     data-modal-size="{{ modal_size }}"
+     data-modal-placement="{{ modal_placement }}"
 >
     {{ formset.management_form }}
     <div data-formset-body class="formset-row">
@@ -47,7 +50,6 @@
                         Sin datos     
                     </td>
                 </tr>
-                
             </tbody>
             {% if has_footer %}
             <tfoot>
