feat: add success message to demo views

--- a/demo/templates/bootstrap4/base.html
+++ b/demo/templates/bootstrap4/base.html
@@ -20,6 +20,11 @@
         <div class="col col-md-10 mx-auto my-3">
             {% block breadcrumb %}
             {% endblock %}
+            {% for message in messages %}
+                <div class="alert alert-{{message.tags}}" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
             <main>
                 {% block content %}
                 {% endblock %}
