--- a/demo/templates/bootstrap4/base.html
+++ b/demo/templates/bootstrap4/base.html
@@ -34,6 +34,7 @@
 </div>
 
 <script src="{% static 'crispy_formset_modal/js/crispy-formset-modal.min.js' %}"></script>
+<script src="{% url 'javascript-catalog' %}"></script>
 <script>
     hljs.highlightAll();
 </script>
