feat: add bootstrap5 template pack support

--- a/demo/templates/demo.html
+++ b/demo/templates/demo.html
@@ -1,4 +1,4 @@
-{% extends "bootstrap4/base.html" %}
+{% extends "base.html" %}
 {% load crispy_forms_tags %}
 
 {% block title %} {{title}} {% endblock %}
@@ -8,7 +8,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="/">Home</a></li>
-          <li class="breadcrumb-item"><a href="{% url 'demo:b4-index' %}">Bootstrap4</a></li>
+          <li class="breadcrumb-item"><a href="{{ index_url }}">{{ template_pack|title }}</a></li>
           <li class="breadcrumb-item active" aria-current="page"> {{class_name}} </li>
         </ol>
     </nav>
@@ -19,6 +19,11 @@
     <section>
     {{ docstring|safe }}
     <hr>
-    {% crispy form %}
+    {% if template_pack == "bootstrap4" %}
+        {% crispy form form.helper "bootstrap4" %}
+    {% endif %}
+    {% if template_pack == "bootstrap5" %}
+        {% crispy form form.helper "bootstrap5" %}
+    {% endif %}
     </section>
 {% endblock %}
