--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'bootstrap4/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 <section>
@@ -6,6 +6,7 @@
     <h3>Supported Template Packs</h3>
     <ul>
         <li><a href="{% url 'demo:b4-index' %}">Bootstrap4</a></li>
+        <li><a href="{% url 'demo:b5-index' %}">Bootstrap5</a></li>
     </ul>
 </section>
 {% endblock  %}
