--- a/demo/templates/demo_index.html
+++ b/demo/templates/demo_index.html
@@ -1,11 +1,11 @@
-{% extends 'bootstrap4/base.html' %}
+{% extends "base.html" %}
 
 {% block breadcrumb %}
 <nav>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="/">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page"> Bootstrap4 </li>
+          <li class="breadcrumb-item active" aria-current="page"> {{ template_pack|title }} </li>
         </ol>
     </nav>
 </nav>
@@ -14,7 +14,7 @@
 {% block content %}
 <section>
     <h1>Django Crispy Formset Modal Demo</h1>
-    <h3>Bootstrap4</h3>
+    <h3>{{ template_pack|title }} </h3>
     <ul>
         {% for demo_view in views %}
             <li><a href="{% url demo_view.url_name %}">{{ demo_view.title }}</a></li>
