--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -7,6 +7,7 @@
     <ul>
         <li><a href="{% url 'demo:b4-index' %}">Bootstrap4</a></li>
         <li><a href="{% url 'demo:b5-index' %}">Bootstrap5</a></li>
+        <li><a href="{% url 'demo:tailwind-index' %}">Tailwind</a></li>
     </ul>
 </section>
 {% endblock  %}
