--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -3,26 +3,37 @@
 <html>
 <head>
     <title>{% block title %}Crispy Formset Modal Demo{% endblock %}</title>
+    {% if template_pack == "tailwind" %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github-dark.min.css">
+    {% else %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github.min.css">
+    {% endif %}
     {% if template_pack == "bootstrap4" or not template_pack%}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     {% endif %}
     {% if template_pack == "bootstrap5"%}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     {% endif %}
+    {% if template_pack == "tailwind"%}
+    <link rel="stylesheet" href="{% static "styles.css" %}">
+    {% endif %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/languages/django.min.js"></script>
     <style>
         .hljs {
+           {% if template_pack == "tailwind" %}
+           background: var(--tw-prose-pre-bg);
+           {% else %}
            background: rgb(233 236 239 / 0.27);
+           {% endif %}
         }        
     </style>
 </head>
 <body>
-<div class="container">
+<div class="container {% if template_pack == 'tailwind' %}mx-auto{% endif %}">
     <div class="row">
-        <div class="col col-md-10 mx-auto my-3">
+        <div class="{% if template_pack == 'tailwind' %}max-w-7xl{% else %}col col-md-10{% endif %} mx-auto my-3">
             {% block breadcrumb %}
             {% endblock %}
             {% for message in messages %}
