feat: style improvements

--- a/crispy_formset_modal/templates/crispy_formset_modal/tailwind/table.html
+++ b/crispy_formset_modal/templates/crispy_formset_modal/tailwind/table.html
@@ -51,7 +51,7 @@
                         </thead>
                         <tbody class="divide-y divide-gray-200 bg-white">  
                             <tr class="empty-table">
-                                <td class="empty-table-content text-center" colspan={{ headers|length|add:3 }}>
+                                <td class="empty-table-content text-center text-sm p-4 text-gray-500" colspan={{ headers|length|add:3 }}>
                                 {% trans "No data" %}   
                                 </td>
                             </tr>
