--- a/crispy_formset_modal/templates/crispy_formset_modal/tailwind/modal.html
+++ b/crispy_formset_modal/templates/crispy_formset_modal/tailwind/modal.html
@@ -5,7 +5,9 @@
       <div class="relative rounded-lg bg-white shadow max-h-screen overflow-y-auto">
         <div class="flex items-start justify-between rounded-t px-6 py-3 modal-header">
             <h3 class="modal-title text-lg font-medium text-gray-900">{% trans "Edit" %}</h3>
-            <button type="button" data-formset-modal-toggle="{{ dialog_id }}" class="cmf-close btn-close" aria-label="Close">
+            <button type="button" data-formset-modal-toggle="{{ dialog_id }}" class="cmf-close text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" aria-label="Close">
+              <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+              <span class="sr-only">Close modal</span>
             </button>
         </div>
         <div class="px-6 pt-2 pb-2 modal-body">
