--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -8,6 +8,7 @@
         <li><a href="{% url 'demo:b4-index' %}">Bootstrap4</a></li>
         <li><a href="{% url 'demo:b5-index' %}">Bootstrap5</a></li>
         <li><a href="{% url 'demo:tailwind-index' %}">Tailwind</a></li>
+        <li><a href="{% url 'demo:bulma-index' %}">Bulma</a></li>
     </ul>
 </section>
 {% endblock  %}
