--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -17,6 +17,9 @@
     {% if template_pack == "tailwind"%}
     <link rel="stylesheet" href="{% static "styles.css" %}">
     {% endif %}
+    {% if template_pack == "bulma" %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    {% endif %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/languages/django.min.js"></script>
@@ -25,7 +28,11 @@
            {% if template_pack == "tailwind" %}
            background: var(--tw-prose-pre-bg);
            {% else %}
-           background: rgb(233 236 239 / 0.27);
+            {% if template_pack == "bulma" %}
+            background: #f5f5f5;
+            {% else %}
+            background: rgb(233 236 239 / 0.27);
+            {% endif %}
            {% endif %}
         }        
     </style>
@@ -37,9 +44,17 @@
             {% block breadcrumb %}
             {% endblock %}
             {% for message in messages %}
-                <div class="alert alert-{{message.tags}}" role="alert">
-                    {{ message }}
-                </div>
+                {% if template_pack == "bulma" %}
+                    <div class="message is-{{message.tags}}" role="alert">
+                        <div class="message-body">
+                            {{ message }}
+                        </div>
+                    </div>
+                {% else %}
+                    <div class="alert alert-{{message.tags}}" role="alert">
+                        {{ message }}
+                    </div>
+                {% endif %}
             {% endfor %}
             <main>
                 {% block content %}
