fix: docs links and demo page viewport

--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Crispy Formset Modal Demo{% endblock %}</title>
     {% if template_pack == "tailwind" %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github-dark.min.css">
