--- a/demo/templates/tailwind/field.html
+++ b/demo/templates/tailwind/field.html
@@ -13,13 +13,8 @@
     {% endif %}
 
     {# if field has a special template then use this #}
-    {% if field|is_select %}
+    {% if field|is_checkboxselectmultiple %}
         <div class="{% if field_class %}{{ field_class }}{% else %}mb-3{% endif %}"{% if flat_attrs %} {{ flat_attrs|safe }}{% endif %}>
-
-        {% include 'tailwind/layout/select.html' %}
-    {% elif field|is_checkboxselectmultiple %}
-        <div class="{% if field_class %}{{ field_class }}{% else %}mb-3{% endif %}"{% if flat_attrs %} {{ flat_attrs|safe }}{% endif %}>
-
         {% include 'tailwind/layout/checkboxselectmultiple.html' %}
     {% elif field|is_radioselect %}
         <div class="{% if field_class %}{{ field_class }}{% else %}mb-3{% endif %}"{% if flat_attrs %} {{ flat_attrs|safe }}{% endif %}>
