feat: add new events a some fixes

--- a/crispy_formset_modal/templates/crispy_formset_modal/bootstrap5/table.html
+++ b/crispy_formset_modal/templates/crispy_formset_modal/bootstrap5/table.html
@@ -33,7 +33,7 @@
         <table class="table table-striped table-bordered mb-2">
             <thead class="formset-table">
                 <tr>
-                <th style="width: 2.5rem;"><input type="checkbox" class="select-all form-check-input"></th>
+                <th style="width: 2.5rem; text-align: center;"><input type="checkbox" class="select-all form-check-input"></th>
                 <th style="width: 2.5rem;">No.</th>
                 {% for header in headers %}
                 <th scope="col"
